--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.5.14",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
+    "passport-http": "*",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
   },
