Update 0.0.4 - UI/UX Updates

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "Don",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.16.1",
     "mongoose": "^5.5.14",
     "nodemon": "^1.19.1",
