--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "mongoose": "^5.6.2",
-    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-http": "*",
     "passport-local": "^1.0.0",
@@ -33,5 +32,8 @@
     "heroku",
     "express"
   ],
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  }
 }
